Updated the email address.

--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>About us - KMEP</title>
+    <title>About Us - KMEP</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
