--- a/contact-us.html
+++ b/contact-us.html
@@ -45,8 +45,8 @@
                         </header>
                         <p>
                           <strong
-                            ><a href="mailto:info@kmep.co.in"
-                              >info@kmep.co.in</a
+                            ><a href="mailto:rajesh@kmep.co.in"
+                              >rajesh@kmep.co.in</a
                             ></strong
                           >
                         </p>
