Fixed the logo redirect to home page on mobile device and corrected the typo.

--- a/about.html
+++ b/about.html
@@ -40,10 +40,10 @@
                   <p>
                     From our humble beginnings last year, we've grown
                     significantly, solidifying our position as a respected
-                    entity in MEP engineering. The K-MEP difference lies in our
+                    entity in MEP engineering. The KMEP difference lies in our
                     innovative approach, execution precision, and a steadfast
                     dedication to exceeding client expectations. As we express
-                    gratitude to clients, partners, and our team, K-MEP remains
+                    gratitude to clients, partners, and our team, KMEP remains
                     poised for continued growth, eagerly embracing future
                     opportunities in engineering excellence.
                   </p>
@@ -61,7 +61,7 @@
 
                     <i class="fas fa-check-circle"></i> Representation of global
                     technology leaders, serving diverse industrial sectors and
-                    applications.
+                    applications
                   </p>
                 </article>
 
