--- a/services.html
+++ b/services.html
@@ -25,7 +25,7 @@
                   <section class="box article-list">
                     <h2>Services</h2>
                     <p>
-                      KEERTHAN MEP ENGINEERS offers engineering solutions for a
+                      Keerthan MEP Engineers offers engineering solutions for a
                       wide spectrum of industries in areas such as heating,
                       ventilation and air conditioning, refrigeration,
                       electro-mechanical projects, building management systems,
