--- a/team.html
+++ b/team.html
@@ -29,7 +29,7 @@
                     ><img src="images/team.png" alt=" " />
                   </span>
                   <!--p>
-                    Our accomplishments at K-MEP are a direct result of the
+                    Our accomplishments at KMEP are a direct result of the
                     capabilities of our diverse and skilled team.
                   </p-->
 
