Corrected the typo in index and service pages.

--- a/services.html
+++ b/services.html
@@ -29,7 +29,7 @@
                       wide spectrum of industries in areas such as heating,
                       ventilation and air conditioning, refrigeration,
                       electro-mechanical projects, building management systems,
-                      Energy conservation, energy audits and indoor air quality.
+                      energy conservation, energy audits and indoor air quality.
                     </p>
                     <!-- Excerpt HVAC-->
                     <article class="box excerpt">
