--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                   <section class="box spotlight">
                     <h2 class="icon fa-lightbulb">Spotlight</h2>
                     <article>
-                      <a href="#" class="image featured"
+                      <a class="image featured"
                         ><img src="images/spotlight.png" alt=""
                       /></a>
                       <p>
