Added imeage scrolling to support more client images.

--- a/about.html
+++ b/about.html
@@ -38,14 +38,14 @@
                   </p>
 
                   <p>
-                    From our humble beginnings last year, we've grown
-                    significantly, solidifying our position as a respected
-                    entity in MEP engineering. The KMEP difference lies in our
-                    innovative approach, execution precision, and a steadfast
-                    dedication to exceeding client expectations. As we express
-                    gratitude to clients, partners, and our team, KMEP remains
-                    poised for continued growth, eagerly embracing future
-                    opportunities in engineering excellence.
+                    From our humble beginnings, we've grown significantly,
+                    solidifying our position as a respected entity in MEP
+                    engineering. The KMEP difference lies in our innovative
+                    approach, execution precision, and a steadfast dedication to
+                    exceeding client expectations. As we express gratitude to
+                    clients, partners, and our team, KMEP remains poised for
+                    continued growth, eagerly embracing future opportunities in
+                    engineering excellence.
                   </p>
                   <p>
                     The Company's strengths lie principally in :<br />
