--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       content="width=device-width, initial-scale=1, user-scalable=no"
     />
     <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="stylesheet" href="assets/css/imagescrolling.css" />
   </head>
   <body class="homepage is-preload">
     <div id="page-wrapper">
@@ -243,7 +244,7 @@
                   <section class="box spotlight">
                     <h2 class="icon fa-lightbulb">Spotlight</h2>
                     <article>
-                      <a class="image featured"
+                      <a href="#" class="image featured"
                         ><img src="images/spotlight.png" alt=""
                       /></a>
                       <p>
@@ -274,68 +275,57 @@
                     <h2>Our Clients</h2>
                   </header>
                 </div>
-                <div class="col-2 col-4-medium">
-                  <section>
-                    <a class="image featured"
-                      ><img src="images/clients/db.png" alt=""
-                    /></a>
-                  </section>
-                </div>
-                <div class="col-2 col-4-medium">
-                  <section>
-                    <a class="image featured"
-                      ><img src="images/clients/felicity-square.png" alt=""
-                    /></a>
-                  </section>
-                </div>
-                <div class="col-2 col-4-medium">
-                  <section>
-                    <a class="image featured"
-                      ><img src="images/clients/lg.png" alt=""
-                    /></a>
-                  </section>
-                </div>
-                <div class="col-2 col-4-medium">
-                  <section>
-                    <a class="image featured"
-                      ><img src="images/clients/sarathas.png" alt=""
-                    /></a>
-                  </section>
-                </div>
-                <div class="col-2 col-4-medium">
-                  <section>
-                    <a class="image featured"
-                      ><img src="images/clients/svb.png" alt=""
-                    /></a>
-                  </section>
-                </div>
-                <div class="col-2 col-4-medium">
-                  <section>
-                    <a class="image featured"
-                      ><img src="images/clients/taneira.png" alt=""
-                    /></a>
-                  </section>
-                </div>
-                <div class="col-2 col-4-medium">
-                  <section>
-                    <a class="image featured"
-                      ><img src="images/clients/teal.png" alt=""
-                    /></a>
-                  </section>
-                </div>
-                <div class="col-2 col-4-medium">
-                  <section>
-                    <a class="image featured"
-                      ><img src="images/clients/titan.png" alt=""
-                    /></a>
-                  </section>
-                </div>
-                <div class="col-2 col-4-medium">
-                  <section>
-                    <a class="image featured"
-                      ><img src="images/clients/titan-eyeplus.jpg" alt=""
-                    /></a>
-                  </section>
+              </div>
+              <div id="scroll-container">
+                <div id="image-container">
+                  <div class="image-wrapper">
+                    <img src="images/clients/apostolic.png" alt="apostolic" />
+                  </div>
+                  <div class="image-wrapper">
+                    <img src="images/clients/db.png" alt="DB" />
+                  </div>
+                  <div class="image-wrapper">
+                    <img
+                      src="images/clients/felicity-square.png"
+                      alt="Felicity Square"
+                    />
+                  </div>
+                  <div class="image-wrapper">
+                    <img src="images/clients/lg.png" alt="LG" />
+                  </div>
+                  <div class="image-wrapper">
+                    <img src="images/clients/micro-tech.png" alt="Micro Tech" />
+                  </div>
+                  <div class="image-wrapper">
+                    <img src="images/clients/ola.png" alt="Ola" />
+                  </div>
+                  <div class="image-wrapper">
+                    <img src="images/clients/rsm-towers.png" alt="RSM Towers" />
+                  </div>
+                  <div class="image-wrapper">
+                    <img src="images/clients/sarathas.png" alt="Sarathas" />
+                  </div>
+                  <div class="image-wrapper">
+                    <img src="images/clients/svb.png" alt="SVB" />
+                  </div>
+                  <div class="image-wrapper">
+                    <img src="images/clients/taneira.png" alt="Taneira" />
+                  </div>
+                  <div class="image-wrapper">
+                    <img src="images/clients/teal.png" alt="Teal" />
+                  </div>
+                  <div class="image-wrapper">
+                    <img
+                      src="images/clients/titan-eyeplus.jpg"
+                      alt="Titan Eyeplus"
+                    />
+                  </div>
+                  <div class="image-wrapper">
+                    <img src="images/clients/titan.png" alt="Titan" />
+                  </div>
+                  <div class="image-wrapper">
+                    <img src="images/clients/client1.png" alt="client1" />
+                  </div>
                 </div>
               </div>
             </section>
@@ -355,5 +345,6 @@
     <script src="assets/js/breakpoints.min.js"></script>
     <script src="assets/js/util.js"></script>
     <script src="assets/js/main.js"></script>
+    <script src="assets/js/imagescrolling.js"></script>
   </body>
 </html>
